add by awen 1,limit如果是-1则不设登陆限制